Fix the “go to” module to be a vertical list on small screens.

--- a/sass/foundation/breakpoints.scss
+++ b/sass/foundation/breakpoints.scss
@@ -4,7 +4,7 @@
 $screen-huge:   1500px;
 $screen-large:  1150px;
 $screen-medium: 900px;
-$screen-small:  650px;
+$screen-small:  670px;
 $screen-tiny:   450px;
 
 $fixed-width: 0 !default;
